# libocf-android

./: .gitignore  README.md  build.gradle
src/main/cpp/: CMakeLists.txt  ocfapp.cpp
src/main/java/com/wiklosoft/ocf/: OcfControlPoint.java  OcfDevice.java  OcfDeviceVariable.java
